added gpio keyboard and some other stuff to xorg.conf

--- a/etc/X11/xorg.conf
+++ b/etc/X11/xorg.conf
@@ -1,21 +1,22 @@
 Section "Module"
-	Load	"extmod"
-	Load	"dbe"
-	Load	"glx"
+	Disable	"extmod"
+	Disable	"dbe"
+	Disable	"glx"
 	Load	"freetype"
 	Load	"type1"
-	Load	"record"
-	Load	"dri"
+	Disable	"record"
+	Disable	"dri"
+	Load	"evdev"
 	Load	"evdev"
 	Load	"evdev"
 EndSection
 
 Section "Monitor"
-	Identifier	"Builtin Default Monitor"
+	Identifier	"monitor"
 EndSection
 
 Section "Device"
-	Identifier	"Builtin Default fbdev Device 0"
+	Identifier	"framebuffer"
 	#Option		"Device" "/dev/fb0"
 	#Driver		"s3c64xx"
 	Driver		"fbdev"
@@ -28,9 +29,9 @@ Section "Device"
 EndSection
 
 Section "Screen"
-	Identifier	"Builtin Default fbdev Screen 0"
-	Device		"Builtin Default fbdev Device 0"
-	Monitor		"Builtin Default Monitor"
+	Identifier	"default_screen"
+	Device		"framebuffer"
+	Monitor		"monitor"
 EndSection
 
 Section "InputDevice"
@@ -42,22 +43,33 @@ Section "InputDevice"
 	#Option		"InvertX" "True"
 	Option		"EmulateThirdButton" "True"
 	Option		"EmulateThirdButtonTimeout" "500"
-	Option		"CorePointer" "True"
+#	Option		"CorePointer" "True"
 EndSection
 
 Section "InputDevice"
 	Identifier	"s3c_keyboard"
 	Option		"Device" "/dev/input/event1"
 	Driver		"evdev"
-	Option		"CoreKeyboard" "True"
+#	Option		"CoreKeyboard" "True"
+EndSection
+
+Section "InputDevice"
+	Identifier	"gpio_keyboard"
+	Option		"Device" "/dev/input/event0"
+	Driver		"evdev"
+#	Option		"CoreKeyboard" "True"
 EndSection
 
 Section "ServerLayout"
-	Identifier	"Builtin Default Layout"
-	Screen		"Builtin Default fbdev Screen 0"
+	Identifier	"default_layout"
+	Screen		"default_screen"
+	InputDevice "touch"
+	InputDevice "s3c_keyboard"
+	InputDevice "gpio_keyboard"
 EndSection
 
 Section "ServerFlags"
 	Option		"DontZap"  "0"
     Option		"AutoAddDevices" "False"
+    Option		"ServerLayout" "default_layout"
 EndSection
